# AnyMusic

./: .gitignore  .pylintrc  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  lint.yml
anymusic/: __init__.py  basic.py  scale.py  timbre.py  tuning.py  type.py  util.py  wave.py
docs/: index.md  reference.md
example/: a4.py  piano.py  raising.py
reference/: index.html
