[tool.poetry]
name = "anymusic"
version = "0.0.2"
description = "Music from the very basic."
authors = ["Yi Cao <me@ycao.top>"]
readme = "README.md"
repository = "https://github.com/xiaoyu2006/AnyMusic"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pylint = "^2.17.4"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
